2008-12-24  ARAKI Yasuhiro  <ar@debian.org>

	* Change to include sub categories at viewing.
	* Add rss link image.

2008-12-22  ARAKI Yasuhiro  <ar@debian.org>

	* This version is running with rails2.2.2. (checked by rake test). However, following feature is disabled.
	- cache expiring test.
	- spam filter by antispam.rb for model/comment.rb. (Akismet bloking is alive.)

2008-12-19  ARAKI Yasuhiro  <ar@debian.org>

	* This version is running with rails2.1.2. (checked by rake test).

2008-08-29  ARAKI Yasuhiro  <ar@debian.org>

	* app/views/admin/shared/edit_don_env.rhtml (baseurl): Change to split "mandatory" and "optional" parameters.

	* app/helpers/application_helper.rb (ApplicationHelper#don_get_oldconfig): Fix for first "rake db:migrate".

2008-06-20  ARAKI Yasuhiro  <ar@debian.org>

	* config/initializers/fix_multibyte_chars_respond_to.rb: Add new file for run with rails2.0.2 + ruby1.8.7. Thanks ay!
	* config/initializers/remove_string_chars.rb: likewise.

2008-05-19  ARAKI Yasuhiro  <ar@debian.org>

	* app/controllers/application.rb (ApplicationController::don_delete_cache_all): Add to delete feed.xml. (Apply to change routes.rb.)
	* test/integration/cache_test.rb (CacheTest::test_delete_cache): Add new method.

	* app/views/notes/default/*.rhtml: Fix to use flash[:notice]. I'm sorry, I lacked to change them at May.16.

2008-05-17  ARAKI Yasuhiro  <ar@debian.org>

	* app/controllers/notes_controller.rb (NotesController::noteslist): Back to use for wrong URI redirect from ?ct=Time.now to ?notice.

	* config/routes.example.rb: Change to generate file/URL with flash[:notice]
	* test/functional/notes_controller_test.rb (NotesControllerTest::test_parse_nums__1): Apply for these change.


2008-05-16  ARAKI Yasuhiro  <ar@debian.org>

	* app/controllers/notes_controller.rb (NotesController::indexabc): Change to use for wrong URI redirect ?notice to ?ct=Time.now.to_i.